--- a/src/app/organizations/tabs/organizations-tab/organizations-tab.css
+++ b/src/app/organizations/tabs/organizations-tab/organizations-tab.css
@@ -3,3 +3,10 @@
   flex-direction: column;
   flex: 1;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: start;
+}
